--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,11 @@ body{
     padding: 7px;
     background-color: lightslategray;
 }
+.topHeader h1{
+    color: rgb(20, 82, 254);
+    font-size: 88px;
+}
 
 nav {
     text-align: center;
-}
+} 
