--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap'); /* Importando uma fonte*/
+
 body{
     margin: 0px;
 }
@@ -21,22 +23,12 @@ p{
     letter-spacing: 5px; /* Da o espaçamento entre as letras*/
     line-height: 1.0;/* Da espaço entre a linha de cima e a linha de baixo*/
     word-spacing: 5px; /* Da espaço entre uma palavra e outra*/
-    
+    font-family:Noto serif Ahom; /* Escolher a fonte do elemento*/
+    font-size: 15px;/* Escolher o tamanho da fonte*/
 }
 
 
-.botão{
-    margin-left: 45%;
-    text-align: center;
-    background: green;
-    color: white;
-    padding: 1.5%; 
-    text-decoration: none;
-    border-radius: 25px;
-}
-.botão:hover{ /*Hover cria uma animação ao passar o mouse por cima do elemento*/
-    background-color: blue;
-}
+
 
 .topHeader{
     text-align: center;
@@ -44,10 +36,75 @@ p{
 
 }
 
-#pteste{
-    max-width: 3000px;
-    max-height: 150px;
-    margin: 50px;
-    background-color: grey;
-    text-align: center;
+a.botao1{
+     background: lightgreen;
+     color: white;
+     padding: 10px;
+     text-decoration: none;
+     border: 4px solid greenyellow;
+     border-radius: 5px;
 }
+
+a.botao1:hover{
+    background: darkgreen;
+    padding: 13px;
+    border: 4px solid greenyellow;
+}  
+
+a.botao2{
+    text-decoration: none;
+    padding: 10px;
+    border: 5px double blue;
+    color:blue;
+}
+
+a.botao2:hover{
+    text-decoration: underline;
+    padding: 8px;
+    background: blue;
+    color: white;
+}
+
+a.botao3{
+    color: black;
+    text-decoration: none;
+
+}
+
+a.botao3:hover{
+    border-bottom:5px solid rgb(255, 0, 0);
+}
+
+a.botao4{
+    text-decoration: none;
+    color: blue;
+    font-size: 18px;
+}
+
+a.botao4:hover{
+    font-size: 22px;
+    font-weight: bold;
+}
+
+a.botao5{
+    margin:50%;
+    text-align: center;
+    background: black;
+    border: 3px solid black;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    padding: 10px;
+    border-radius:15px;
+    border: 4px double black;
+}
+
+a.botao5:hover{
+    color:black;
+    background: white;
+}
+
+    
+
+
+
+
