--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ body{
     display: inline-block;
     background: blue;
     width: 100%;
-    height: 400px
+    height: 400px;
+    position: relative;
 }
 
 .div1{
@@ -25,17 +26,16 @@ body{
     background: yellow;
     height: 100px;
     position: relative;
-    left: 60px;
     z-index: 2;
 }
 
 .div2{
-    position: relative;/* Define a posição relativa do meu elemento*/
+    position: sticky;/* Ao dar Scrool na página, faz com que o elemento fique grudado na tela e acompanhe*/
     z-index: 3;
     height: 100px;
     width: 30%;
     display: inline-block;
-    background: white;
+    background: rgb(237, 3, 250);
 }
 
 .div3{
@@ -43,6 +43,9 @@ body{
     width: 30%;
     display: inline-block;
     background: red;
+    position: absolute; /* Definindo a posição do elemento dentro de outro elemento, apenas funciona se o elemento pai tem posição definida*/
+    top: 150px;
+    right: 50%;
 }
 
 .whats{/* Definindo um elemento para ser usado como se fosse de suporte de páginas padrão por ai*/
@@ -54,3 +57,4 @@ body{
     bottom: 10px;
     right: 10px;
 }
+
