--- a/css/style.css
+++ b/css/style.css
@@ -14,39 +14,27 @@ body{
 
 .container{
     display: inline-block;
-    background: blue;
     width: 100%;
-    height: 400px;
+    height: 450px;
     position: relative;
+    z-index: 1;
+    border: 3px dashed black;
+}
+.centro{
+    position: absolute;
+    top:50%;
+    width: 100%; 
+    text-align: center;
 }
 
-.div1{
-    width: 30%;
-    display: inline-block;
-    background: yellow;
-    height: 100px;
-    position: relative;
-    z-index: 2;
+img{
+    width: 100% ;
+    height: 100%;
+    opacity: 0.5;
+    object-fit: cover;
+    border: 2px solid greenyellow;
 }
 
-.div2{
-    position: sticky;/* Ao dar Scrool na página, faz com que o elemento fique grudado na tela e acompanhe*/
-    z-index: 3;
-    height: 100px;
-    width: 30%;
-    display: inline-block;
-    background: rgb(237, 3, 250);
-}
-
-.div3{
-    height: 100px;
-    width: 30%;
-    display: inline-block;
-    background: red;
-    position: absolute; /* Definindo a posição do elemento dentro de outro elemento, apenas funciona se o elemento pai tem posição definida*/
-    top: 150px;
-    right: 50%;
-}
 
 .whats{/* Definindo um elemento para ser usado como se fosse de suporte de páginas padrão por ai*/
     background: green;
