--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,20 @@
 body{
     margin:0;
-}
-.borda{
-    border:3px solid red;
-}
-
-.ex2{
-    max-width: 800px;
-}
-.ex1{
-    max-width: 800px;
-}
-
-.container{
-    display: inline-block;
-    width: 100%;
-    height: 450px;
-    position: relative;
-    z-index: 1;
-    border: 3px dashed black;
-}
-.centro{
-    position: absolute;
-    top:50%;
-    width: 100%; 
-    text-align: center;
-}
-
-img{
-    width: 100% ;
-    height: 100%;
-    opacity: 0.5;
-    object-fit: cover;
-    border: 2px solid greenyellow;
+    overflow-y: hidden;
 }
 
 
-.whats{/* Definindo um elemento para ser usado como se fosse de suporte de páginas padrão por ai*/
-    background: green;
-    color: white;
-    width: 80px;
-    height: 80px;
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-}
+.exemplo{
+    background: rgb(143, 143, 161);
+    color: rgb(0, 0, 0);
+    height: 150px; /* TODO Overflow apenas funciona caso a altura do elemento seja definida*/
+    overflow:auto; /* TODO Apenas mostra os itens que cabem dentro do objeto, caso o item não couber, ele automaticamente não apresenta o item*/
+} 
+
+
+
+
+
+
+
 
