--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,41 @@
-body{
-    margin: 0;
+/* Smartphones (600px para baixo) */
+@media only screen and (max-width: 600px) {
+    body{
+        background: orangered;
+    }
 }
 
-h1{
-    text-shadow: 2px 2px 5px red;
-    margin: 15px;
+/* Dispositivos um pouco maiores, mas ainda pequenos (Pequenos Tablets e Smartphones + largos, 600px para cima) */
+@media only screen and (min-width: 600px) {
+    body{
+        background: green;
+    }
 }
 
-.branco{
-    color:white;
-    text-shadow: 2px 2px 4px black;
-    margin: 15px;
+/*Dispostivos Médios (Tablets deitados, 768px para cima) */
+@media only screen and (min-width: 768px) {
+    body{
+        background: yellow;
+    }
 }
 
-.multipla{
-    color: black;
-    text-shadow: 0px 0px 4px blue , 2px 2px 5px yellow;
-    margin: 15px;
+/* Dispostivos Largos (laptops/desktops, 992px para cima) */
+@media only screen and (min-width: 992px) {
+    body{
+        background: red;
+    }
+    .x
 }
 
-.box{
-    background: white;
-    width: 40%;
-    height: 450px;
-    box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    margin: auto;
-    text-align: center;
+/* Super Largos (Telas maiores laptops, desktops e até TVs, 1200px para cima) */
+@media only screen and (min-width: 1200px) {
+    body{
+        background: blue;
+    }
+}
+
+@media only screen and (min-width: 1600px){
+    body{
+        background: yellowgreen;
+    }
 }
