--- a/css/style.css
+++ b/css/style.css
@@ -1,110 +1,80 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap'); /* Importando uma fonte*/
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+HR+Lijeva:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+*{
+    box-sizing: border-box;
+}/* Incorpora margin e paddings em uma caixa */
 
 body{
-    margin: 0px;
+    margin: 0;
+    font-family: "Roboto", sans-serif;
 }
 
-
-h1{
-    letter-spacing: 2px;
-    color: white;
-    border: 1px outset black;
-    border-radius: 15px;
-    text-align: center;
-    background: black;
-    margin: 30px; /*Da espaçapamento envolta do elemento*/
-    padding: 10px; /*Da espaçamento dentro do elemento*/
-}
-
-p{
-    color: black;
-    text-align: justify;
-    text-indent: 30px; /* Da o espaço como se fosse um paragrafo */
-    letter-spacing: 5px; /* Da o espaçamento entre as letras*/
-    line-height: 1.0;/* Da espaço entre a linha de cima e a linha de baixo*/
-    word-spacing: 5px; /* Da espaço entre uma palavra e outra*/
-    font-family:Noto serif Ahom; /* Escolher a fonte do elemento*/
-    font-size: 15px;/* Escolher o tamanho da fonte*/
-}
-
-
-
-
-.topHeader{
-    text-align: center;
-    margin: 20px;
-
-}
-
-a.botao1{
-     background: lightgreen;
-     color: white;
-     padding: 10px;
-     text-decoration: none;
-     border: 4px solid greenyellow;
-     border-radius: 5px;
-}
-
-a.botao1:hover{
-    background: darkgreen;
-    padding: 13px;
-    border: 4px solid greenyellow;
-}  
-
-a.botao2{
-    text-decoration: none;
-    padding: 10px;
-    border: 5px double blue;
-    color:blue;
-}
-
-a.botao2:hover{
-    text-decoration: underline;
-    padding: 8px;
-    background: blue;
-    color: white;
-}
-
-a.botao3{
-    color: black;
-    text-decoration: none;
-
-}
-
-a.botao3:hover{
-    border-bottom:5px solid rgb(255, 0, 0);
-}
-
-a.botao4{
-    text-decoration: none;
-    color: blue;
-    font-size: 18px;
-}
-
-a.botao4:hover{
-    font-size: 22px;
-    font-weight: bold;
-}
-
-a.botao5{
-    margin:50%;
-    text-align: center;
-    background: black;
-    border: 3px solid black;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    padding: 10px;
-    border-radius:15px;
-    border: 4px double black;
-}
-
-a.botao5:hover{
-    color:black;
+.navbar{
+    display: flex;
+    flex-flow: row wrap;
+    height: 100px;
     background: white;
+    justify-content: center;
+    align-items: center;
 }
 
-    
+.logo{
+    flex:20%;
+    margin-left: 10%;
+    text-align: center;
 
+}
+.logo h1{
+    font-family: "Playwrite HR Lijeva", cursive;
+    color: #180f4a;
+    font-size: 34px;
+}
 
+.menu{
+    flex: 70%;
+    text-align: right;
+    padding: 20px;
+}
 
+.menu a{
+    color: #180f4a;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 20px 16px;
+}
 
+.menu a:hover{
+    color: #ff2978;
+    border-top: 4px solid #180f4a;
+}
+
+#botao{
+    background: #180f4a;
+    padding: 10px 25px;
+    color:white;
+    border-radius: 5px;
+    margin-right: 10%;
+    margin-left: 5%;
+}
+#botao:hover{
+    border: none;
+    background: #ff2978;
+}
+
+.header{
+    display: flex;
+    flex-flow: row wrap;
+    height: 600px;
+    background: gray;
+}
+
+.headline{
+    margin-left: 10%;
+    flex: 40%;
+    border: 1px solid black;
+}
+
+.img-headline{
+    margin-right: 10%;
+    flex:40%;
+    border:1px solid deeppink;
+}
